fix(different components): fix small layout bugs

--- a/src/components/LabelPicker/LabelPicker.scss
+++ b/src/components/LabelPicker/LabelPicker.scss
@@ -20,6 +20,7 @@ $labelingDialogWidth: 200px;
     }
 
     &__checkbox {
+        display: flex;
         margin-bottom: var(--space-100);
     }
 
